# FastAPI-Air-guardian

./: .env.example  .settings.py  Makefile  README.md  celery_app.py  celerybeat-schedule  database.py  main.py  model.py  pyproject.toml  settings.py  tasks.py
air_guardian/: tasks.py
src/: celery_app.py  create_tables.py  database.py  errors.py  main.py  model.py  schemas.py  settings.py  tasks.py
