[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "air-guardian"
version = "0.1.0"
description = "A simple real time drone monitoring system that id when drone enter nzf"
authors = ["Abderrahman Gaga <agaga@student.hive.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic-settings = ">=2.10.1,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=6.2.0,<7.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
